[gd_scene load_steps=46 format=3 uid="uid://dw0veek4u0c0f"]

[ext_resource type="Script" path="res://world.gd" id="1_q874b"]
[ext_resource type="PackedScene" uid="uid://jcsijd2gratx" path="res://levi.tscn" id="1_w5emb"]
[ext_resource type="PackedScene" uid="uid://dfmihe84doi2w" path="res://ui.tscn" id="2_fy15p"]
[ext_resource type="PackedScene" uid="uid://n8qxxgs1va51" path="res://pause_menu.tscn" id="3_qivui"]
[ext_resource type="Script" path="res://Key.gd" id="3_yudsf"]
[ext_resource type="PackedScene" uid="uid://cne2vkbuko74n" path="res://dialogue.tscn" id="4_5c66b"]
[ext_resource type="Texture2D" uid="uid://w7i2b4en17mt" path="res://chave .png" id="4_a55cx"]
[ext_resource type="Script" path="res://Door.gd" id="4_p7l7x"]
[ext_resource type="Texture2D" uid="uid://c7iyho44hohwo" path="res://heart.png" id="7_x6esr"]
[ext_resource type="Texture2D" uid="uid://c0sh8h0bgyw4v" path="res://medalha1.png" id="7_yic50"]
[ext_resource type="Texture2D" uid="uid://cbeyo5fgbwg8l" path="res://door-Sheet.png" id="10_bsgxo"]
[ext_resource type="PackedScene" uid="uid://yvvidq8dwd07" path="res://walking_enemy.tscn" id="10_xfj1e"]
[ext_resource type="PackedScene" uid="uid://c85ne3234n830" path="res://tile_map.tscn" id="11_6idk1"]
[ext_resource type="Script" path="res://Lever.gd" id="14_ex33n"]
[ext_resource type="Texture2D" uid="uid://bmxp2le8ry21e" path="res://lever-Sheet.png" id="14_f7k5k"]
[ext_resource type="Texture2D" uid="uid://4plvvmik3f1h" path="res://inc-door-Sheet.png" id="15_jfv74"]
[ext_resource type="Script" path="res://Button.gd" id="17_phbpo"]
[ext_resource type="Texture2D" uid="uid://bituovdn688mj" path="res://bot√£o.png" id="18_owq7d"]
[ext_resource type="Texture2D" uid="uid://gh8yf0c350kd" path="res://statue.png" id="19_pg6r5"]
[ext_resource type="Script" path="res://Ball.gd" id="19_qow65"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elsyx"]
size = Vector2(11, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghqed"]
size = Vector2(10, 10.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4myn4"]
size = Vector2(8, 9.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6m27"]
size = Vector2(44, 70)

[sub_resource type="Animation" id="Animation_0v3iq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/DDoorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0ipo5"]
resource_name = "new_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/DDoorSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6l1w"]
_data = {
"RESET": SubResource("Animation_0v3iq"),
"new_animation": SubResource("Animation_0ipo5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8lrc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b0c6v"]
atlas = ExtResource("14_f7k5k")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3k7x"]
atlas = ExtResource("14_f7k5k")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ei84m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0c6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3k7x")
}],
"loop": false,
"name": &"lever",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abnb4"]
size = Vector2(25, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjdmw"]
size = Vector2(12, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7tk7"]
size = Vector2(12, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ld6"]
atlas = ExtResource("15_jfv74")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn1v5"]
atlas = ExtResource("15_jfv74")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vrcin"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ld6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn1v5")
}],
"loop": false,
"name": &"move_door",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lju5a"]
atlas = ExtResource("18_owq7d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rm6p"]
atlas = ExtResource("18_owq7d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7y7o"]
atlas = ExtResource("18_owq7d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr4wc"]
atlas = ExtResource("18_owq7d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_28eer"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lju5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rm6p")
}],
"loop": false,
"name": &"press",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7y7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr4wc")
}],
"loop": false,
"name": &"unpressed",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20pn7"]
size = Vector2(8.5, 7.5)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_88uck"]
friction = 0.64
rough = true
bounce = 0.69

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8jij1"]
radius = 8.45929
height = 18.2169

[node name="World" type="Node2D"]
script = ExtResource("1_q874b")

[node name="UI" parent="." instance=ExtResource("2_fy15p")]

[node name="PauseMenu" parent="UI" instance=ExtResource("3_qivui")]
visible = false

[node name="Dialogue" parent="UI" instance=ExtResource("4_5c66b")]
process_mode = 3
visible = false

[node name="RichTextLabel" parent="UI/Dialogue" index="1"]
metadata/_edit_use_anchors_ = true

[node name="Key" type="Area2D" parent="."]
position = Vector2(-17, 138)
collision_mask = 3
script = ExtResource("3_yudsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Key"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_elsyx")

[node name="Sprite2D" type="Sprite2D" parent="Key"]
position = Vector2(-0.5, 0.5)
scale = Vector2(0.9375, 0.9375)
texture = ExtResource("4_a55cx")

[node name="Medal" type="Area2D" parent="."]
position = Vector2(19, 140)
collision_mask = 3
script = ExtResource("3_yudsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Medal"]
position = Vector2(-1, -1.6875)
shape = SubResource("RectangleShape2D_ghqed")

[node name="Sprite2D" type="Sprite2D" parent="Medal"]
position = Vector2(-1, -2)
scale = Vector2(0.625, 0.625001)
texture = ExtResource("7_yic50")

[node name="Trophy" type="Area2D" parent="."]
position = Vector2(102, -5)
collision_mask = 3
script = ExtResource("3_yudsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trophy"]
shape = SubResource("RectangleShape2D_4myn4")

[node name="Sprite2D" type="Sprite2D" parent="Trophy"]
texture = ExtResource("7_x6esr")

[node name="Door" type="Area2D" parent="."]
collision_mask = 3
script = ExtResource("4_p7l7x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(170, 108)
shape = SubResource("RectangleShape2D_q6m27")

[node name="DDoorSprite" type="Sprite2D" parent="Door"]
z_index = 1
position = Vector2(175, 95)
texture = ExtResource("10_bsgxo")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n6l1w")
}

[node name="TileMap" parent="." instance=ExtResource("11_6idk1")]
layer_0/tile_data = PackedInt32Array(589824, 65536, 0, 589825, 65536, 0, 589826, 65536, 0, 589827, 65536, 0, 589828, 65536, 0, 589829, 65536, 0, 589830, 65536, 0, 589831, 65536, 0, 589832, 65536, 0, 589833, 65536, 0, 589834, 65536, 0, 655359, 65536, 0, 655358, 65536, 0, 589838, 65536, 0, 589837, 65536, 0, 589836, 65536, 0, 589835, 65536, 0, 655356, 65536, 0, 655357, 65536, 0, 524303, 393216, 2, 524304, 458752, 2, 458769, 393216, 2, 458770, 458752, 2, 524305, 393216, 3, 524306, 458752, 3, 589839, 393216, 3, 589840, 458752, 3, 589841, 458752, 3, 589842, 458752, 3, 655355, 65536, 0, 655354, 65536, 0, 655353, 65536, 0, 655352, 65536, 0, 655351, 65536, 0, 720887, 262144, 3, 720888, 262144, 3, 720889, 262144, 3, 720890, 262144, 3, 720891, 262144, 3, 720892, 262144, 3, 720893, 262144, 3, 720894, 262144, 3, 720895, 262144, 3, 655360, 262144, 3, 655361, 262144, 3, 655362, 262144, 3, 655363, 262144, 3, 655364, 262144, 3, 655365, 262144, 3, 655366, 262144, 3, 655367, 262144, 3, 655368, 262144, 3, 655369, 262144, 3, 655370, 262144, 3, 720896, 262144, 3, 786431, 262144, 3, 786430, 262144, 3, 786429, 262144, 3, 786428, 262144, 3, 786427, 262144, 3, 786426, 262144, 3, 786425, 262144, 3, 786424, 262144, 3, 786423, 262144, 3, 720897, 262144, 3, 720898, 262144, 3, 720899, 262144, 3, 720900, 262144, 3, 720901, 262144, 3, 720902, 262144, 3, 720903, 262144, 3, 720904, 262144, 3, 720905, 262144, 3, 720906, 262144, 3, 720907, 262144, 3, 720908, 262144, 3, 720909, 262144, 3, 720910, 262144, 3, 720911, 262144, 3, 655371, 262144, 3, 655372, 262144, 3, 655373, 262144, 3, 655374, 262144, 3, 655375, 262144, 3, 655376, 262144, 3, 655377, 262144, 3, 655378, 262144, 3, 720914, 262144, 3, 720913, 262144, 3, 720912, 262144, 3, 851959, 262144, 3, 851960, 262144, 3, 851961, 262144, 3, 851962, 262144, 3, 851963, 262144, 3, 851964, 262144, 3, 851965, 262144, 3, 851966, 262144, 3, 851967, 262144, 3, 786432, 262144, 3, 786433, 262144, 3, 786434, 262144, 3, 786435, 262144, 3, 786436, 262144, 3, 786437, 262144, 3, 786438, 262144, 3, 786439, 262144, 3, 786440, 262144, 3, 786441, 262144, 3, 786442, 262144, 3, 786443, 262144, 3, 786444, 262144, 3, 786445, 262144, 3, 786446, 262144, 3, 786447, 262144, 3, 786448, 262144, 3, 786449, 262144, 3, 786450, 262144, 3, 655350, 65536, 0, 655349, 65536, 0, 655348, 65536, 0, 655347, 65536, 0, 655346, 65536, 0, 655345, 65536, 0, 655344, 65536, 0, 655343, 65536, 0, 655342, 65536, 0, 655341, 65536, 0, 393235, 393216, 2, 393236, 458752, 2, 327701, 393216, 2, 327702, 458752, 2, 262167, 393216, 2, 262168, 458752, 2, 196633, 393216, 2, 196634, 458752, 2, 131099, 393216, 2, 131100, 458752, 2, 458771, 393216, 3, 393237, 393216, 3, 327703, 393216, 3, 262169, 393216, 3, 196635, 393216, 3, 131101, 65536, 0, 393238, 458752, 3, 393239, 458752, 3, 327704, 458752, 3, 327705, 458752, 3, 327707, 458752, 3, 262170, 458752, 3, 262171, 458752, 3, 196636, 458752, 3, 196637, 458752, 3, 196638, 458752, 3, 131102, 65536, 0, 131103, 65536, 0, 131104, 65536, 0, 196640, 458752, 3, 196639, 458752, 3, 262174, 458752, 3, 327710, 458752, 3, 327709, 458752, 3, 262172, 458752, 3, 262173, 458752, 3, 327708, 458752, 3, 327706, 458752, 3, 393241, 458752, 3, 393240, 458752, 3, 458774, 458752, 3, 458773, 458752, 3, 458772, 458752, 3, 524308, 458752, 3, 524307, 458752, 3, 589843, 458752, 3, 589844, 458752, 3, 589845, 458752, 3, 524309, 458752, 3, 458775, 458752, 3, 458776, 458752, 3, 458777, 458752, 3, 458778, 458752, 3, 393242, 458752, 3, 393243, 458752, 3, 393244, 458752, 3, 393245, 458752, 3, 393246, 458752, 3, 262175, 458752, 3, 262176, 458752, 3, 327712, 458752, 3, 458783, 458752, 3, 393247, 458752, 3, 393248, 458752, 3, 458782, 458752, 3, 458781, 458752, 3, 458780, 458752, 3, 458779, 458752, 3, 524316, 458752, 3, 524317, 458752, 3, 524315, 458752, 3, 524314, 458752, 3, 524313, 458752, 3, 524312, 458752, 3, 524311, 458752, 3, 524310, 458752, 3, 655379, 458752, 3, 655380, 458752, 3, 655381, 458752, 3, 655382, 458752, 3, 655383, 458752, 3, 655384, 458752, 3, 655385, 458752, 3, 655386, 458752, 3, 655387, 458752, 3, 655388, 458752, 3, 655389, 458752, 3, 655390, 458752, 3, 720915, 458752, 3, 720916, 458752, 3, 720917, 458752, 3, 720918, 458752, 3, 720919, 458752, 3, 720920, 458752, 3, 720921, 458752, 3, 720922, 458752, 3, 720923, 458752, 3, 720924, 458752, 3, 720925, 458752, 3, 720926, 458752, 3, 786462, 458752, 3, 786461, 458752, 3, 786460, 458752, 3, 786459, 458752, 3, 786458, 458752, 3, 786457, 458752, 3, 786456, 458752, 3, 786455, 458752, 3, 786454, 458752, 3, 786453, 458752, 3, 786452, 458752, 3, 786451, 458752, 3, 589846, 458752, 3, 589847, 458752, 3, 589848, 458752, 3, 589849, 458752, 3, 589850, 458752, 3, 589851, 458752, 3, 589852, 458752, 3, 589853, 458752, 3, 589854, 458752, 3, 589855, 458752, 3, 655391, 458752, 3, 720927, 458752, 3, 786463, 458752, 3, 720928, 458752, 3, 655392, 458752, 3, 589856, 458752, 3, 524320, 458752, 3, 524319, 458752, 3, 524318, 458752, 3, 458784, 458752, 3, 786464, 458752, 3, 131105, 65536, 0, 327711, 65536, 1, 196641, 65536, 1, 524321, 65536, 1, 589857, 65536, 1, 655393, 65536, 1, 720929, 65536, 1, 786465, 65536, 1, 786466, 196608, 0, 720930, 196608, 0, 655394, 196608, 0, 589858, 196608, 0, 524322, 196608, 0, 458786, 196608, 0, 393250, 196608, 0, 327714, 196608, 0, 262178, 196608, 0, 196642, 196608, 0, 131106, 196608, 0, 65570, 196608, 0, 34, 196608, 0, -65502, 196608, 0, -131038, 196608, 0, -196574, 196608, 0, -262110, 196608, 0, -327646, 196608, 0, -393182, 196608, 0, 458785, 65536, 1, 393249, 65536, 1, 327713, 65536, 1, 262177, 65536, 1, -458718, 131072, 0, -524254, 131072, 0, 24, 65536, 0, 23, 65536, 0, 22, 65536, 0, 21, 65536, 0, 20, 65536, 0, 19, 65536, 0, 18, 65536, 0, 17, 65536, 0, 16, 65536, 0, 15, 65536, 0, 14, 65536, 0, 13, 65536, 0, 12, 65536, 0, 11, 65536, 0, 10, 65536, 0, 9, 65536, 0, 8, 65536, 0, 7, 65536, 0, 6, 65536, 0, 5, 65536, 0, 4, 65536, 0, 3, 65536, 0, 2, 65536, 0, 1, 65536, 0, 0, 65536, 0, 65535, 65536, 0, 65534, 65536, 0, 65533, 65536, 0, 65532, 65536, 0, 65531, 65536, 0, 65530, 65536, 0, -327667, 131072, 0, -327666, 131072, 0, -327665, 131072, 0, -327664, 131072, 0, -327663, 131072, 0, -327662, 131072, 0, -327661, 131072, 0, -327660, 131072, 0, -327659, 131072, 0, -327658, 131072, 0, -327657, 131072, 0, -327656, 131072, 0, -327668, 131072, 0, -327669, 131072, 0, -327670, 131072, 0, -327671, 131072, 0, -327672, 0, 0, -327655, 131072, 0, -327654, 131072, 0, -327653, 131072, 0, -327652, 131072, 0, -327651, 131072, 0, -327650, 131072, 0, -327649, 131072, 0, -327648, 131072, 0, -327647, 131072, 0, 65529, 65536, 0, 65528, 65536, 0, 65527, 65536, 0, 65526, 65536, 0, 65525, 65536, 0, 65524, 65536, 0, 65523, 65536, 0, 65522, 65536, 0, 65521, 65536, 0, 65520, 65536, 0, 65519, 65536, 0, 65518, 65536, 0, 851958, 65536, 1, 786422, 65536, 1, 720886, 65536, 1, 720885, 65536, 1, 720884, 65536, 1, 720883, 65536, 1, 720882, 65536, 1, 720881, 65536, 1, 720880, 65536, 1, 720879, 65536, 1, 720878, 65536, 1, 720877, 65536, 1, 786413, 65536, 1, 786414, 65536, 1, 786415, 65536, 1, 786416, 65536, 1, 786420, 65536, 1, 786421, 65536, 1, 851956, 65536, 1, 851955, 65536, 1, 851954, 65536, 1, 851953, 65536, 1, 851952, 65536, 1, 786417, 65536, 1, 786418, 65536, 1, 786419, 65536, 1, 851957, 65536, 1, 851951, 65536, 1, 851950, 65536, 1, 851949, 65536, 1, 65517, 0, 0, 131053, 0, 0, 196589, 0, 0, 262125, 0, 0, 327661, 0, 0, 393197, 0, 0, 458733, 0, 0, 524269, 0, 0, 589805, 0, 0, 25, 0, 0, -327673, 0, 0, -327674, 0, 0, -327675, 0, 0, -327676, 0, 0, -327677, 0, 0, -327678, 0, 0, -327679, 0, 0, -327680, 0, 0, -262145, 0, 0, -262146, 0, 0, -262147, 0, 0, -262148, 0, 0, -262149, 0, 0, -262150, 0, 0, -262151, 0, 0, -262152, 0, 0, -262163, 0, 0, -196627, 0, 0, -131091, 0, 0, -65555, 0, 0, -19, 0, 0, -262162, 262144, 2, -196624, 262144, 2, -131086, 262144, 2, -65548, 262144, 2, -262161, 327680, 2, -196623, 327680, 2, -131085, 327680, 2, -18, 262144, 3, -65554, 262144, 3, -131090, 262144, 3, -196626, 262144, 3, -196625, 327680, 3, -131089, 262144, 3, -65553, 262144, 3, -17, 262144, 3, -16, 262144, 3, -65552, 262144, 3, -131088, 262144, 3, -131087, 327680, 3, -65551, 262144, 3, -15, 262144, 3, -14, 262144, 3, -65550, 262144, 3, -65549, 327680, 3, -13, 262144, 3, -12, 262144, 3, -10, 262144, 2, -65547, 327680, 2, -11, 327680, 3, -9, 327680, 2, -589790, 131072, 0, -458736, 131072, 0, -393200, 131072, 0, -524272, 131072, 0)

[node name="dialogue1" type="Area2D" parent="."]
position = Vector2(104, 132)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="dialogue1"]
shape = SubResource("RectangleShape2D_d8lrc")

[node name="dialogue2" type="Area2D" parent="."]
position = Vector2(326, -11)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="dialogue2"]
shape = SubResource("RectangleShape2D_d8lrc")

[node name="Lever" type="Area2D" parent="."]
position = Vector2(263, -13)
collision_mask = 3
script = ExtResource("14_ex33n")

[node name="lever" type="AnimatedSprite2D" parent="Lever"]
sprite_frames = SubResource("SpriteFrames_ei84m")
animation = &"lever"

[node name="lever_collision" type="CollisionShape2D" parent="Lever"]
position = Vector2(2.5, 3.5)
shape = SubResource("RectangleShape2D_abnb4")

[node name="DoorUp" type="StaticBody2D" parent="."]
position = Vector2(169, -32)

[node name="doorup_collision" type="CollisionShape2D" parent="DoorUp"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_qjdmw")

[node name="doorup_collision2" type="CollisionShape2D" parent="DoorUp"]
position = Vector2(-1, -20)
shape = SubResource("RectangleShape2D_k7tk7")

[node name="slider_door_up" type="AnimatedSprite2D" parent="DoorUp"]
position = Vector2(-2.75, -1.25)
scale = Vector2(1.11719, 1.11719)
sprite_frames = SubResource("SpriteFrames_vrcin")
animation = &"move_door"

[node name="WalkingEnemy" parent="." instance=ExtResource("10_xfj1e")]
position = Vector2(61, 143)

[node name="Levi" parent="." instance=ExtResource("1_w5emb")]
position = Vector2(363.599, -81.8968)
collision_mask = 161

[node name="GroundButton" type="StaticBody2D" parent="."]
position = Vector2(442.856, -89.5246)
collision_layer = 129
collision_mask = 0

[node name="Button" type="Area2D" parent="GroundButton"]
collision_layer = 0
collision_mask = 130
script = ExtResource("17_phbpo")

[node name="ButtonPress" type="AnimatedSprite2D" parent="GroundButton/Button"]
sprite_frames = SubResource("SpriteFrames_28eer")
animation = &"press"

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundButton/Button"]
position = Vector2(-0.25, 4.75)
shape = SubResource("RectangleShape2D_20pn7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GroundButton"]
polygon = PackedVector2Array(-19.9717, 9.50037, -6, 3, 6, 3, 20.8638, 9.7854)

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2(315.162, -101.495)
collision_layer = 128
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_88uck")
can_sleep = false
script = ExtResource("19_qow65")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
position = Vector2(1.58919, 2.45)
scale = Vector2(0.78125, 0.78125)
texture = ExtResource("19_pg6r5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(0.3125, 13.375)
shape = SubResource("CapsuleShape2D_8jij1")

[connection signal="body_entered" from="Key" to="." method="_on_key_body_entered"]
[connection signal="body_entered" from="Key" to="Key" method="_on_body_entered"]
[connection signal="body_entered" from="Medal" to="." method="_on_medal_body_entered"]
[connection signal="body_entered" from="Medal" to="Medal" method="_on_body_entered"]
[connection signal="body_entered" from="Trophy" to="." method="_on_trophy_body_entered"]
[connection signal="body_entered" from="Trophy" to="Trophy" method="_on_body_entered"]
[connection signal="body_entered" from="Door" to="." method="_on_door_body_entered"]
[connection signal="body_entered" from="dialogue1" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="dialogue2" to="." method="_on_dialogue_2_body_entered"]
[connection signal="body_entered" from="GroundButton/Button" to="GroundButton/Button" method="_on_body_entered"]
[connection signal="body_exited" from="GroundButton/Button" to="GroundButton/Button" method="_on_body_exited"]

[editable path="UI/Dialogue"]
